--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     text-align: center;
     margin: 0;
     padding: 0;
-    background: url('https://upload.wikimedia.org/wikipedia/commons/3/3a/Downtown_San_Diego_Skyline_at_Night.jpg') no-repeat center center/cover;
+    background: url('https://images.pexels.com/photos/176837/pexels-photo-176837.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2') no-repeat center center/cover;
     color: white;
 }
 header {
