--- a/style.css
+++ b/style.css
@@ -3,8 +3,21 @@ body {
     text-align: center;
     margin: 0;
     padding: 0;
-    background: url('https://images.pexels.com/photos/196642/pexels-photo-196642.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2') no-repeat center center fixed; background-size: cover;
     color: white;
+    position: relative;
+}
+
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('https://images.pexels.com/photos/196642/pexels-photo-196642.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2') no-repeat center center fixed;
+    background-size: cover;
+    filter: blur(8px); /* Adjust blur intensity */
+    z-index: -1;
 }
 header {
     background: rgba(0, 0, 0, 0.7);
