--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@ body {
     text-align: center;
     margin: 0;
     padding: 0;
-    color: white;
+    background: url('https://images.pexels.com/photos/196642/pexels-photo-196642.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2') no-repeat center center fixed;
+    background-size: cover;
     position: relative;
+    color: white;
 }
 
 body::before {
@@ -14,11 +16,11 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('https://images.pexels.com/photos/196642/pexels-photo-196642.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2') no-repeat center center fixed;
-    background-size: cover;
-    filter: blur(1px); /* Adjust blur intensity */
+    background: inherit;
+    filter: blur(0.5px);
     z-index: -1;
 }
+
 header {
     background: rgba(0, 0, 0, 0.7);
     padding: 20px;
